# FrameX-kit

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.js  flake.nix  mypy.ini  poe_tasks.toml  pyproject.toml  pytest.ini  releaserc.toml  renovate.json  ruff.toml
.github/: dependabot.yml
.github/workflows/: page.yml  pre-commit.yml  release.yml  secret-detection.yaml  test.yml
book/: book.toml  rust-toolchain.toml
book/src/: SUMMARY.md  development.md  faq.md  overview.md  quickstart.md
book/src/advanced_usage/: advanced_test.md  authentication.md  concurrency_and_ingress.md  docs_ui.md  monitor.md  overview.md  proxy_function.md  ray_engine.md  remote_calls.md  request_cache.md  stsrem_proxy_plugin.md  system_proxy_plugin.md
book/src/basic_usage/: cross_plugin_access.md  overview.md  plugin_configreation.md  plugin_debugging_&_testing.md  plugin_loading_&_startup.md  plugin_register_&_api_expose.md  project_structure.md
book/theme/: index.hbs  pagetoc.css
src/framex/: __init__.py  cli.py  config.py  consts.py  log.py  utils.py
src/framex/adapter/: __init__.py  base.py  local_adapter.py  local_adapyer.py  ray_adapter.py
src/framex/driver/: __init__.py  application.py  auth.py  cache.py  decorator.py  ingress.py
src/framex/plugin/: __init__.py  base.py  base_plugin.py  load.py  manage.py  model.py  on.py  resolver.py
src/framex/plugins/: echo.py  invoker.py
src/framex/plugins/proxy/: __init__.py  builder.py  config.py  model.py
src/framex/repository/: __init__.py  versioning.py
src/framex/repository/providers/: __init__.py  base.py  github.py  gitlab.py
src/framex/utils/: __init__.py  cache.py  common.py  config_docs.py  docs.py
tests/: conftest.py  consts.py  mock.py  test_cli.py  test_config.py  test_exception.py  test_ingress_defaults.py  test_plugin.py  test_plugins.py  test_use_ray_integration.py  test_utils.py  test_wrapper.py
tests/adapter/: test_init.py  test_local_adapter.py  test_ray_adapter.py
tests/api/: test_base.py  test_echo.py  test_health.py  test_invoker.py  test_proxy.py  test_websocket.py
tests/driver/: test_application.py  test_auth.py  test_decorator.py  test_ingress.py  test_request_cache.py
tests/plugins/: alias_model.py  error_import.py  export.py  websocket_demo.py
tests/plugins/invoker/: __init__.py
tests/ray_plugins/: test_service_caller.py
tools/coverage_support/: sitecustomize.py
