[project]
name = "framex-kit"
version = "0.2.6"
description = "A lightweight plugin injection framework for Python."
readme = "README.md"
authors = [{ name = "touale", email = "touale@local.com" }]
requires-python = ">=3.11"
dependencies = [
  "aiocache>=0.12.3",
  "click>=8.1.8",
  "fastapi>=0.115.13",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pytz>=2025.2",
  "ray[serve]==2.53.0",
  "sentry-sdk[fastapi]>=2.33.0",
  "tomli>=2.2.1",
]

[dependency-groups]
dev = [
  "coverage>=7.9.2",
  "mypy>=1.16.1",
  "poethepoet>=0.36.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "pytest-env>=1.1.5",
  "pytest-order>=1.3.0",
  "pytest-recording>=0.13.4",
  "ruff==0.14.10",
  "types-pytz>=2025.2.0.20250516",
  "types-pyyaml>=6.0.12.20250516",
]


[project.scripts]
framex = "framex.cli:framex"

[project.optional-dependencies]
release = ["poethepoet>=0.36.0", "python-semantic-release>=10.2.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
default-groups = []

[[tool.uv.index]]
name = "custom-repo"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/framex"]
